Fixed logo alignment issue

--- a/HTML/assets/css/styles.css
+++ b/HTML/assets/css/styles.css
@@ -1309,7 +1309,7 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6{
     }
 
     #main-nav .navbar-brand{
-        padding-top: 5px;
+        padding-top: 8px;
         font-size: 21px;
         color:#6d6d6d;
     }
